--- a/final.ipynb
+++ b/final.ipynb
@@ -3,7 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "announced-barbados",
+   "id": "loved-chick",
    "metadata": {},
    "source": [
     "# Call of Duty: Warzone Player Data Analysis\n",
@@ -11,9 +11,9 @@
     "\n",
     "![cod](./WZ.jpg)\n",
     "\n",
-    "Call of Duty: Warzone is a free-to-play battle royale video game released in 2020 by Acitivision. It can be played on PC, Xbox, and Playstation. There are two main gamemodes: battle royale and plunder. In the battle royale mode you and 149 other people compete on the map and the goal is to be the last player or last team alive depending on which mode you queue into. The \"safe zone\" of the map gets smaller every couple minutes and if you aren't in it you die so it forces people to move and that forces people to run into each other and that is what makes sure the game doesn't last for hours. In the plunder mode the goal is to collect the most money. This tutorial will focus on the battle royale mode because it is a lot more popular and it is a lot more competitive, with there being occasional tournaments where players, usually professional players or streamers, can compete to win cash prizes. One of the biggest problem in the game since it was released is the amount of hackers in the game. These hackers can have hacks such as wall hacks that lets them see other players through walls or aimbot that allows them to hit every shot automatically. If you are playing a tournament when real money is on the line it would be very frustrating to run into a cheater, and even playing casually it isn't enjoyable to be killed by someone that is cheating. \n",
+    "Call of Duty: Warzone is a free-to-play battle royale video game released in 2020 by Activision. It can be played on PC, Xbox, and PlayStation. There are two main gamemodes: battle royale and plunder. In the battle royale mode you and 149 other people compete on the map and the goal is to be the last player or last team alive depending on which mode you queue into. The \"safe zone\" of the map gets smaller every couple minutes and if you aren't in it you die so it forces people to move and that forces people to run into each other and that is what makes sure the game doesn't last for hours. In the plunder mode the goal is to collect the most money. This tutorial will focus on the battle royale mode because it is a lot more popular and it is a lot more competitive, with there being occasional tournaments where players, usually professional players or streamers, can compete to win cash prizes. One of the biggest problem in the game since it was released is the amount of hackers in the game. These hackers can have hacks such as wall hacks that lets them see other players through walls or aimbot that allows them to hit every shot automatically. If you are playing a tournament when real money is on the line it would be very frustrating to run into a cheater, and even playing casually it isn't enjoyable to be killed by someone that is cheating. \n",
     "\n",
-    "The goal of this tutorial is to look at player profile data to determine what actions in game lead to a better chance of winning and also using a players profile to predict whether they are cheating. The tutorial uses the [this dataset](google.com) and the following python packages:\n",
+    "The goal of this tutorial is to look at player profile data to determine what actions in game lead to a better chance of winning and also using a players profile to predict whether they are cheating. The tutorial uses the [this dataset](https://github.com/adamulan/warzone-player-data-analysis/blob/main/wzdata.csv) and the following python packages:\n",
     "- cloudscraper\n",
     "- json\n",
     "- pandas\n",
@@ -25,7 +25,7 @@
     "\n",
     "## Dataset\n",
     "\n",
-    "In order to do the analysis that I wanted to do I needed a set of player profile data that was labeled whether the player was a hacker or not and after some looking I realized that there was no such dataset available. I knew that there are a lot of websites that you can go on to look at your stats so I had to find one of those sites and find an api to pull data from. The site that I used is probably the one most people use to look at their stats and it is [cod.tracker.gg](cod.tracker.gg/warzone). The only problem is that they had no publicy documented APIs to use so it took more digging to eventually find the API endpoint that they use for players. I wrote the script below to pull player data and add it to a csv file and this can be used as is as long as you add a valid username to the player variable. \n",
+    "In order to do the analysis that I wanted to do I needed a set of player profile data that was labeled whether the player was a hacker or not and after some looking I realized that there was no such dataset available. I knew that there are a lot of websites that you can go on to look at your stats so I had to find one of those sites and find an api to pull data from. The site that I used is probably the one most people use to look at their stats and it is [cod.tracker.gg](https://cod.tracker.gg/warzone). The only problem is that they had no publicy documented APIs to use so it took more digging to eventually find the API endpoint that they use for players. I wrote the script below to pull player data and add it to a csv file and this can be used as is as long as you add a valid username to the player variable. \n",
     "> **_NOTE:_**  If the username of the player also has an identifier tag after it (not all usernames do) you need to make sure to include the whole thing ex. `player = 'timthetatman#4119609'`\n",
     "\n",
     "> **_NOTE:_**  This only works for PC players"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "indirect-knight",
+   "id": "apart-parade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "kdr = parse_json['data']['segments'][1]['stats']['kdRatio']['value']\n",
     "kills = parse_json['data']['segments'][1]['stats']['kills']['value']\n",
     "score = parse_json['data']['segments'][1]['stats']['score']['value']\n",
-    "spg = parse_json['data']['segments'][1]['stats']['scorePerGame']['value']\n",
+    "spg = parse_json['data']['segments'][1]['stats']['scorePerGame']['valueActivision']\n",
     "spm = parse_json['data']['segments'][1]['stats']['scorePerMinute']['value']\n",
     "time_played = parse_json['data']['segments'][1]['stats']['timePlayed']['value']\n",
     "top10 = parse_json['data']['segments'][1]['stats']['top10']['value']\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "psychological-wireless",
+   "id": "dried-transsexual",
    "metadata": {},
    "source": [
     "Now that I had a way to pull the data easier I had decide what players to pull. I decided that I wanted to include 3 categories of players into the dataset: content creators, hackers, and normal players. I decided to bring in content creators as a category because I was interested in how people that play the game for a living compare to casual players and hackers. I also knew that content creators have some of the best stats of players that aren't hackers so it would be good to include them in there to better represent the high end of non hackers so the model wouldn't misidentify them as hackers. The next category is hackers and names of hackers are difficult to find because they don't publicly disclose that they are hacking and they eventually get banned after enough people report them and someone manually bans them. So in order to find hackers I went to YouTube videos posted by the YouTuber [TimTheTatman](https://www.youtube.com/user/timthetatman) because I knew he posts videos spectating hackers and getting them banned. The last category is normal players and in order to get the normal players I went into the lobby of a content creator and got any player that I could. In the end I had 128 players with 29 columns of data and the breakdown was 87 normal players, 21 content creators, and 20 hackers. The pandas dataframe is below and the columns are as follows:\n",
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "framed-brunswick",
+   "id": "economic-bridge",
    "metadata": {},
    "source": [
     "## Data Analysis\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surrounded-desire",
+   "id": "eight-rolling",
    "metadata": {},
    "source": [
     "From these charts we can see that hackers have much higher kill death ratios than streamers and normal players and that is expected. We can also see on the chart between creators and normal players that the kill death ratio of streamers is much higher, so when you play the game for a living you are a lot more likely to have a higher kill death ratio. I expected it to be this way but I did not expect it to be that much higher. \n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designing-horizon",
+   "id": "rental-layout",
    "metadata": {},
    "source": [
     "From these charts we can see that hackers have a much higher spread of win loss than kill death. Similar to above on the chart between creators and normal players creators have a higer win loss rate. \n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "herbal-surgery",
+   "id": "varied-teaching",
    "metadata": {},
    "source": [
     "From the graph we can see that there is a very vague linear relationship between k/d ratio and win loss ratio but it is not something I would say is conclusive evidence that higher kills leads to more wins. Obviously we can see that hackers can have very high k/d ratio and not always win games. \n",
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "obvious-commissioner",
+   "id": "failing-junction",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-webcam",
+   "id": "universal-briefs",
    "metadata": {},
    "source": [
     "From the graph we can see that there is really no relationship between games played and win loss ratio. We can see that most content creators have higher win loss ratio no matter how many games they have played. This relationship or lack thereof makes sense to me because I know from personal experience that you can play the game a lot but you will almost always run into someone that plays the game more than you or is just better so you can lose even if you play a lot. We can also see that most of the hackers never play that many games probably because they get banned before they can play that many. \n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "supreme-growth",
+   "id": "interested-profile",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-vienna",
+   "id": "genuine-asset",
    "metadata": {},
    "source": [
     "From the graph we can see that there is a pretty decent linear relationship between score and winning for normal players and that makes sense because if you are lasing longer in a game you are getting more score and if you last longer you have a better chance to win. \n",
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "deluxe-partition",
+   "id": "related-norway",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brown-pipeline",
+   "id": "latest-coaching",
    "metadata": {},
    "source": [
     "From the graph we can see that there is really no relationship between doing more contracts and winning more games. I would've thought there'd be at least a little bit of a correlation, but from experience there are people that do contracts to find out where the end safe zone is and camp there and they usually get killed by better players even though they know where the safe zone will go.  \n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "quality-asian",
+   "id": "rocky-design",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-consolidation",
+   "id": "original-japanese",
    "metadata": {},
    "source": [
     "As we can see the model is 100 percent accurate and that is good but also bad. The main issue with this model is how little data there is for it to train on. With a dataset this small it will fit the players that are included in the data well but there are millions of players that play the game so there has to be things in outside data that aren't reflected in this model. Also, one of the shortcomings of this model is that it only can detect people that are blatently hacking. It is possible and I would say somewhat likely that people could get sick of losing and download hacks and use them on an account that already has a lot of data that corresponds to not cheating and it would be hard for the model to pick that up unless they do it for a long time. This is mostly becasue the dataset that I used did not include weekly data for hackers. If the dataset had weekly hacker data the model would be able to pick up that something has changed with the players stats especially with the weekly headshot percent because most hackers use aimbots that only register headshots. It is also possible for players to hack and try to hide it and not have high kill games and be blatent about it and again this model wouldn't catch that.\n",
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "promotional-colon",
+   "id": "embedded-cancellation",
    "metadata": {},
    "outputs": [
     {
@@ -852,23 +852,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-narrow",
+   "id": "russian-gilbert",
    "metadata": {},
    "source": [
     "## Conclusion\n",
     "Overall, I think you should be able to look at this tutorial and gain some insight about warzone and player data in warzone. I certainly found it interesting to see how certain stats relate to each other. The biggest problem with this tutorial is how little data it relies on. To gain insight on normal players vs creators and hackers it works fine but it certainly wouldn't be practical to use this model in the actual game because there is just far too little data it is trained on. It would've been nice if Activision had published large datasets of warzone data because it would certainly interest me to see how well hacking could be predicted just using data. Recently, Activision has said that there is an anti-cheat being tested for warzone and it is a kernel-level driver that would detect it in a different way than just using data, but the game has been out for over a year and there are blatent hackers that are still getting away and I feel like if I was able to throw together a model with a small amount of data that is at least somewhat correct then a billion dollar company should be able to do better. \n",
     "\n",
     "\n",
-    "Project Repo: "
+    "Project Repo: https://github.com/adamulan/warzone-player-data-analysis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dress-assembly",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
